# Projet_GPU

./: CMakeLists.txt
fichiers/: Makefile  prog  prog-v0-i-n-s128-a  prog-v0-i1000-n-s128-a  prog-v0-n-s128-a-i1000  prog-v0-n-s4096-a
fichiers/experiences/: lancer-expe.sh  lancer-expe.sh~  prog  prog-v0-n-s128-a-i10  prog-v1-n-s128-a-i10  prog-v2-n-s128-a-i10  prog-v3-n-s128-a-i10
fichiers/experiences/s201-res/: lancer-expe.sh  lancer-expe.sh~  prog-v0-n-s128-a-i1000  prog-v2-n-s256-a-i1000  prog-v3-n-s128-a-i1000  prog-v3-n-s256-a-i1000  prog-v4-n-s128-a-i1000  prog-v4-n-s256-a-i1000  prog-v5-n-s128-a-i1000  prog-v5-n-s256-a-i1000  prog-v6-n-s128-a-i1000  prog-v7-n-s128-a-i1000  prog-v7-n-s256-a-i1000  prog-v8-n-s128-a-i1000  prog-v8-n-s256-a-i1000  prog-v8-n-s4096-a-i100  prog-v8-n-s512-a-i1000  prog-v9-n-s128-a-i1000  prog-v9-n-s4096-a-i100  prog-v9-n-s512-a-i1000
fichiers/experiences/s201-res/kernel/: compute.cl
fichiers/experiences/s201-res/s1024/: prog-v8-n-s1024-a-i100  prog-v8-n-s1024-a-i1000  prog-v9-n-s1024-a-i100
fichiers/experiences/s201-res/s128/: prog-v1-n-s128-a-i1000  prog-v2-n-s128-a-i1000
fichiers/experiences/s201-res/s256/: prog-v0-n-s256-a-i1000  prog-v1-n-s256-a-i1000  prog-v6-n-s256-a-i1000  prog-v9-n-s256-a-i1000
fichiers/experiences/s202-res/: prog-v0-n-s256-a-i1000  prog-v1-n-s512-a-i100  prog-v2-n-s128-a-i1000  prog-v3-n-s256-a-i1000  prog-v3-n-s512-a-i100  prog-v4-n-s256-a-i1000  prog-v5-n-s256-a-i1000  prog-v5-n-s512-a-i100  prog-v6-n-s128-a-i1000  prog-v6-n-s256-a-i1000  prog-v7-n-s128-a-i1000  prog-v7-n-s256-a-i1000
fichiers/experiences/s202-res/s128-dyn/: prog  prog-v0-n-s128-a-i1000  prog-v1-n-s128-a-i1000  prog-v2-n-s128-a-i1000  prog-v3-n-s128-a-i1000  prog-v4-n-s128-a-i1000  prog-v5-n-s128-a-i1000  prog-v6-n-s128-a-i1000  prog-v7-n-s128-a-i1000
fichiers/experiences/s202-res/s128-t128/: prog-v0-n-s128-a-i100  (+7 more)
fichiers/include/: compute.h  constants.h  constants.h~  graphics.h  ocl.h
fichiers/kernel/: compute.cl
fichiers/src/: compute.c  compute.c~  graphics.c  main.c  ocl.c
(+57 files in other folders)
